name:                adventOfCode2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventOfCode2017#readme
license:             MIT
license-file:        LICENSE
author:              Jan van Brügge
maintainer:          supermanitu@gmail.com
copyright:           2017 Jan van Brügge
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day5
  hs-source-dirs:      day5
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.7.1
